<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/outSide"
        android:alpha="0.6"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/dateContent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:alpha="1.0"
        android:layout_margin="50dp"
        android:background="@drawable/rounded_curner_question"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/title"
            android:textSize="20dp"
            android:layout_marginTop="5dp"
            android:background="@null"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/signatureTitle"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/signaturImg"
            android:background="@color/answer"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="700dp"
            android:layout_height="300dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/selectButton"
                android:textColor="@color/white"
                android:text="@string/accept"
                android:visibility="gone"
                android:layout_marginRight="150dp"
                android:background="@drawable/main_button_selector"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/selectButton3"
                android:textColor="@color/white"
                android:text="@string/clean"
                android:layout_marginRight="150dp"
                android:background="@drawable/main_button_selector"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/selectButton2"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:visibility="gone"
                android:background="@drawable/main_button_selector"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>