<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:id="@+id/content"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sectionTitle"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="Datos del Usuario"
        android:textColor="@color/bgDark"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/questionList"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/rounded_curner_question"
            android:alpha="0.7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/name"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:inputType="textCapCharacters"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/lastname"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:inputType="textCapCharacters"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/apeMat"
                android:textColor="@color/bgDark"
                android:layout_height="wrap_content" />

            <com.morpho.demo.customs.CustomEditText
                android:id="@+id/apeMat"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:inputType="textCapCharacters"
                android:text="" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Teléfono"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:inputType="phone"
                    android:text="" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Correo"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:inputType="textWebEmailAddress"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Sexo"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/sexo"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:inputType="textCapCharacters"
                    android:text="" />
                <!--Spinner
                    android:id="@+id/sexo"

                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp" /-->
            </LinearLayout>

        </LinearLayout>

</RelativeLayout>
