<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:id="@+id/content"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sectionTitle"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="Datos del Usuario"
        android:textColor="@color/bgDark"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/questionList"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:background="@drawable/rounded_curner_question"
            android:layout_marginTop="30dp"
            android:alpha="0.7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/name"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:text="MARIO ALBERTO" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/lastname"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/lastname"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="ROJAS"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/apeMat"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/apeMat"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="LEYVA"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IDuser"
                    android:textColor="@color/bgDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/idCustomer"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="0813105570207"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Año de Registro"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/anioRegistro"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="2006"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Emisión"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/emision"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="2010"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Clave de Elector"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/claveElector"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="RJLYMR871015H100"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="CURP"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/curp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="ROLM871015HMNJYR08"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Sexo"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/sexo"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="H"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Estado"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/estado"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="16"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Municipio"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/municipio"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="050"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Localidad"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/localidad"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="0001"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Sección"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/seccion"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="0813"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="Vigencia"
                    android:textColor="@color/bgDark"
                    android:layout_height="wrap_content" />

                <com.morpho.demo.customs.CustomEditText
                    android:id="@+id/vigencia"
                    android:layout_marginLeft="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="2020"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
